# Glfwx

./: CMakeLists.txt  Doxyfile.in  Glfwx.cpp  README.md  Window.cpp
include/Glfwx/: Enumerations.h  Glfwx.h  Monitor.h  Window.h
test/: CMakeLists.txt  test-Glfwx.cpp  test-Monitor.cpp  test-Window.cpp
